[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/UI/speed_item.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/ItemSlot.gd" type="Script" id=2]
[ext_resource path="res://Assets/white_circle.png" type="Texture" id=3]
[ext_resource path="res://Resources/Fonts/small_outline_font.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0235294, 0, 0.0627451, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.3 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
width = 100
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=5]
resource_local_to_scene = true
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 487.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 3 )
color = Color( 0.972549, 0.847059, 0.172549, 1 )

[node name="ItemSlot" type="Panel"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Particles" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 32, 36 )
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 0.45
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="Icon" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Amount" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = -8.0
margin_right = 97.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 4 )
text = "1"
valign = 1

[node name="ButtonIcon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.0
margin_top = -48.0
margin_right = 24.0
expand = true
stretch_mode = 6

[node name="CircleReload" type="TextureProgress" parent="."]
modulate = Color( 0, 0, 0, 0.756863 )
anchor_right = 1.0
anchor_bottom = 1.0
step = 0.1
texture_progress = ExtResource( 3 )
fill_mode = 4
nine_patch_stretch = true

[connection signal="value_changed" from="CircleReload" to="." method="_on_CircleReload_value_changed"]
